add home page links

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
-<h1>Hello from the template</h1>
+<h1>Advisor home</h1>
+<a href="{{ url_for('users')}}">Users</a>
 </body>
 </html>
