--- a/templates/users.html
+++ b/templates/users.html
@@ -13,6 +13,7 @@
     {%block content%}
 <h1>Users</h1>
 <br>
+<a href="{{url_for('hello')}}">Home</a>
 <a href=/adduser><button>Add new user</button></a>
 <table>
 <tr>
