crud functionality for roles

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,7 @@
 <body>
 <h1>Advisor home</h1>
 <a href="{{ url_for('users')}}">Users</a>
+<br>
+<a href="{{ url_for('roles')}}">Roles</a>
 </body>
 </html>
