--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,7 @@
 <a href="{{ url_for('users')}}">Users</a>
 <br>
 <a href="{{ url_for('roles')}}">Roles</a>
+<br>
+<a href="{{ url_for('courses')}}">Courses</a>
 </body>
 </html>
