--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,7 +1,6 @@
 {%extends "layout.html"%}
 {%block content%}
 <h1>Courses</h1>
-<a href="{{url_for('hello')}}">Home</a>
 <a href='/addcourse'>Add a course</a>
 <table>
     <tr>
@@ -10,8 +9,8 @@
     {% for item in data %}
     <tr>
         <td>{{item[2]}}</td>
-        <td><form action='/editrole/{{item[0]}}'><input type='submit' value="Edit"></form></td>
-        <td><form action='/delrole/{{item[0]}}'><input type='submit' value="Delete"></form></td>
+        <td><form action='/viewcourse/{{item[0]}}'><input type='submit' value="View"></form></td>
+        <td><form action='/delcourse/{{item[0]}}'><input type='submit' value="Delete"></form></td>
     </tr>
     {% endfor %}
     </table>
