more work on courses

--- a/templates/addcourse.html
+++ b/templates/addcourse.html
@@ -6,7 +6,7 @@
     <input type='text' name='coursecode'>
     <br>
     <label for='coursedesc'>Course description</label>
-    <input type='text' name='coursedesc'>
+    <textarea name='coursedesc' rows="5" cols="50"></textarea>
     <br>
     <label for='programname'>Program name</label>
     <input type='text' name='programname'>
