--- a/templates/editcourse.html
+++ b/templates/editcourse.html
@@ -3,6 +3,30 @@
 {%block content%}
 
 <h1>Edit course</h1>
+{%for item in data%}
+<form method='POST' action="{{ url_for('commitcourseupdate', id = item[0])}}">
+    <label for='coursecode'>Course Code</label>
+    <input type='text' name='coursecode' value="{{item[2]}}">
+    <br>
+    <label for='coursedesc'>Course Description</label>
+    <textarea name='coursedesc'>{{item[3]}}</textarea>
+    <br>
+    <label for='required'>Required</label>
+    <input type='checkbox' name='required'>
+    <br>
+    <label for='instructiontype'>Instruction type</label>
+    <input type='text' name='instructiontype' value="{{item[7]}}">
+    <br>
+    <label for='category'>Category</label>
+    <input type='text' name='category' value="{{item[8]}}">
+    <br>
+    <label for='subcategory'>Subcategory</label>
+    <input type='text' name='subcategory' value="{{item[9]}}">
+    <br>
+    <input type="submit" value="Update Course info">
 
+</form>
+{%endfor%}
+<a href=/courses><button>Go back to courses page</button></a>
 
 {%endblock%}
