--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@
     width: 1000px;
     margin: auto;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 td{
     padding: 0 15px;
