--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,21 @@
+body{
+    height: 100%;
+}
+html{
+    height: 100%;
+}
 #content{
     background-color: lightblue;
     width: 1000px;
     margin: auto;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 td{
     padding: 0 15px;
+}
+#globalhome{
+    text-align: left;
+    padding-left: 10px;
 }
