--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,18 @@
 <body>
     <div id='content'>
         <header>
-            <div id="globalhome"><a  href="{{url_for('hello')}}">Home</a></div>
+            <div id="globalhome"><a href="{{url_for('hello')}}">Home</a></div>
             {%block header%}{%endblock%}
         </header>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
         {%block content%}
         {%endblock%}
     </div>
