--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,12 @@
 <h1>Advisor home</h1>
 <a href="{{ url_for('users')}}">Users</a>
 <br>
+<a href="{{ url_for('students') }}">Students</a>
+<br>
 <a href="{{ url_for('roles')}}">Roles</a>
 <br>
 <a href="{{ url_for('courses')}}">Courses</a>
 <br>
 <a href="{{ url_for('programs')}}">Programs</a>
+
 {%endblock%}
