--- a/templates/addrole.html
+++ b/templates/addrole.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html' %}
+{% block content %}
 <h1>Add a new role</h1>
 <form method='POST'>
     <label for='rname'>Role name</label>
@@ -9,4 +9,4 @@
 
 </form>
 <a href=/roles><button>Go back to roles page</button></a>
-</html>
+{% endblock %}
