starting work on classes

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,10 @@
 <br>
 <a href="{{ url_for('courses')}}">Courses</a>
 <br>
+<a href="{{ url_for('classes') }}">Classes</a>
+<br>
 <a href="{{ url_for('programs')}}">Programs</a>
+<br>
+<a href="{{ url_for('terms') }}">Terms</a>
 
 {%endblock%}
